Mesh Disappearing after exiting edit mode in sculpt #57040

Closed
opened 2018-10-03 10:52:55 +02:00 by eric · 5 comments

macOS High Sierra 10.13.6
MacBook Pro (Retina, 15-inch, Mid 2015)
2.5 GHz Intel Core i7
16 GB 1600 MHz DDR3
AMD Radeon R9 M370X 2048 MB
Intel Iris Pro 1536 M

Blender 2.80 Alpha 2 - Hash 9596dfc261

If entering edit mode when sculpting, after coming back to the sculpt the mesh disappears,
Going back to the general tab and then again to sculpt makes the mesh visible again.
Sculpt_Bug.blend

macOS High Sierra 10.13.6 MacBook Pro (Retina, 15-inch, Mid 2015) 2.5 GHz Intel Core i7 16 GB 1600 MHz DDR3 AMD Radeon R9 M370X 2048 MB Intel Iris Pro 1536 M Blender 2.80 Alpha 2 - Hash 9596dfc261f If entering edit mode when sculpting, after coming back to the sculpt the mesh disappears, Going back to the general tab and then again to sculpt makes the mesh visible again. [Sculpt_Bug.blend](https://archive.blender.org/developer/F4918066/Sculpt_Bug.blend)
Author

Added subscriber: @EricBu

Added subscriber: @EricBu
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Clément Foucault was assigned by Philipp Oeser 2018-10-04 12:35:42 +02:00
Member

Can confirm this.
Seems to be the case only when Overlays are off.
So even without the file of this report if you do:

  • File > New > Sculpting
  • turn off Overlays (need to use the general show_overlays, it's not enough to disable everything in the popup...)
  • go to edit mode
  • go to sculpt mode
    • QuadSphere disappears

not sure if #57046 is somehow related (for some reason I cant launch renderdoc atm... )

@fclem: another for you? (as usual: feel free to throw back at me for further investigation...)

Can confirm this. Seems to be the case only when Overlays are off. So even without the file of this report if you do: - File > New > Sculpting - turn off Overlays (need to use the general `show_overlays`, it's not enough to disable everything in the popup...) - go to edit mode - go to sculpt mode - > QuadSphere disappears not sure if #57046 is somehow related (for some reason I cant launch renderdoc atm... ) @fclem: another for you? (as usual: feel free to throw back at me for further investigation...)

This issue was referenced by d2f913a37a

This issue was referenced by d2f913a37a1b35504d9ce7a8bff2eec904aa9f3e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57040
No description provided.