Fix T57040 Mesh Disappearing after exiting edit mode in sculpt